--- a/generate/Makefile
+++ b/generate/Makefile
@@ -1,14 +1,14 @@
 CC = clang++-4.0
 CFLAGS = -g -Wall -std=c++1z -I ../dfa -I ../regex -I ../nfa -I . -I ./generator
 
-bin/main:	bin/main.o bin/generate.o bin/dfa.o bin/regex.o bin/nfa.o bin/hopcroft.o
-	${CC} ${CFLAGS} -o bin/main bin/main.o bin/generate.o bin/dfa.o bin/regex.o bin/nfa.o bin/hopcroft.o
+test:	bin/test.o bin/generator.o bin/dfa.o bin/regex.o bin/nfa.o bin/hopcroft.o
+	${CC} ${CFLAGS} -o bin/test bin/test.o bin/generator.o bin/dfa.o bin/regex.o bin/nfa.o bin/hopcroft.o
 
-bin/main.o:	main.cpp generator/generate_category.h ../regex/utilities.h
-	${CC} ${CFLAGS} -c -o bin/main.o main.cpp
+bin/test.o:	test.cpp ../regex/utilities.h
+	${CC} ${CFLAGS} -c -o bin/test.o test.cpp
 
-bin/generate.o:	generator/generate.h generator/generate.cpp
-	${CC} ${CFLAGS} -c -o bin/generate.o generator/generate.cpp
+bin/generator.o:	generator/generator.h generator/generator.cpp
+	${CC} ${CFLAGS} -c -o bin/generator.o generator/generator.cpp
 
 bin/dfa.o: ../dfa/dfa.cpp ../dfa/dfa.h
 	${CC} ${CFLAGS} -c -o bin/dfa.o ../dfa/dfa.cpp
