Move enumeration2.h to its own directory

--- a/dfa/Makefile
+++ b/dfa/Makefile
@@ -1,5 +1,5 @@
 CC = clang++-4.0
-CFLAGS = -g -Wall -std=c++1z -I ../nfa -I . -I ../regex
+CFLAGS = -g -Wall -std=c++1z -I ../nfa -I . -I ../regex -I ../enumeration2
 
 bin/test:	bin/test.o bin/hopcroft.o bin/regex.o bin/dfa.o bin/nfa.o
 	${CC} ${CFLAGS} -o bin/test bin/test.o bin/hopcroft.o bin/regex.o bin/dfa.o bin/nfa.o
@@ -13,7 +13,7 @@ bin/hopcroft.o:	hopcroft.cpp hopcroft.h partition.h
 bin/regex.o:	../regex/regex.h ../regex/regex.cpp
 	${CC} ${CFLAGS} -c -o bin/regex.o ../regex/regex.cpp
 
-bin/dfa.o:	dfa.cpp dfa.h enumeration.h
+bin/dfa.o:	dfa.cpp dfa.h ../enumeration2/enumeration.h ../enumeration2/enumeration2.h
 	${CC} ${CFLAGS} -c -o bin/dfa.o dfa.cpp
 
 bin/nfa.o:	../nfa/nfa.cpp ../nfa/nfa.h 
