Delete unused files

--- a/dfa/Makefile
+++ b/dfa/Makefile
@@ -1,5 +1,5 @@
 CC = clang++-4.0
-CFLAGS = -g -Wall -std=c++1z -I ../nfa -I . -I ../enumeration2 -I ../categories
+CFLAGS = -g -Wall -std=c++1z -I ../nfa -I . -I ../categories
 
 bin/test:	bin/test.o bin/hopcroft.o bin/regex.o bin/dfa.o bin/nfa.o bin/_nfa.o
 	${CC} ${CFLAGS} -o bin/test bin/test.o bin/hopcroft.o bin/regex.o bin/dfa.o bin/nfa.o bin/_nfa.o
@@ -13,7 +13,7 @@ bin/hopcroft.o:	hopcroft.cpp hopcroft.h partition.h
 bin/regex.o:	../categories/regex2.h ../categories/regex2.cpp
 	${CC} ${CFLAGS} -c -o bin/regex.o ../categories/regex2.cpp
 
-bin/dfa.o:	dfa.cpp dfa.h ../enumeration2/enumeration.h ../enumeration2/enumeration2.h
+bin/dfa.o:	dfa.cpp dfa.h enumeration2.h
 	${CC} ${CFLAGS} -c -o bin/dfa.o dfa.cpp
 
 bin/_nfa.o:	../nfa/_nfa.cpp ../nfa/_nfa.h
