--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,8 @@
-CC = clang++-4.0
+CC = clang++
 CFLAGS = -g -Wall -std=c++1z
 
 sample:	sample.cpp sample.h
 	${CC} ${CFLAGS} -o sample sample.cpp
+
+clean:
+	rm sample
