--- a/include/sagl/Makefile
+++ b/include/sagl/Makefile
@@ -1,5 +1,5 @@
 CC = clang++
 CFLAGS = -g -Wall --std=c++1z
 
-main:	main.cpp enumeration.h grammar.h item.h state.h automaton.h parsingtable.h
+main:	main.cpp enumeration.h grammar.h item.h state.h automaton.h parsingtable.h parser.h
 	${CC} ${CFLAGS} -o main main.cpp
