--- a/include/sagl/Makefile
+++ b/include/sagl/Makefile
@@ -1,5 +1,8 @@
-CC = g++
-CFLAGS = -g -Wall --std=c++17
+CC = clang++
+CFLAGS = -g -Wall --std=c++1z
 
 main:	main.cpp enumeration.h grammar.h item.h state.h automaton.h parsingtable.h parser.h scanner.h
 	${CC} ${CFLAGS} -o main main.cpp
+
+clean:
+	rm main
