Fix Makefile for examples

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -g -Wall -I../include
 CXX = g++
-CXXFLAGS = -g -Wall -I../src/rnd -I../src/distree/include -I../src/red-black-tree
+CXXFLAGS = -g -Wall -I../include -I../src
 
 vpath %.so ../lib
 
