Add Makefile.am and configure.ac

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,17 @@ env
 examples/example_cpp
 examples/example_c
 bin/test_*
+autoscan.log
+aclocal.m4
+autom4te.cache
+config.h.in*
+configure
+m4
+compile
+config.guess
+config.sub
+depcomp
+install-sh
+ltmain.sh
+missing
+Makefile.in
