--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,8 @@ AC_CHECK_HEADERS([stddef.h])
 AC_CHECK_HEADER_STDBOOL
 AC_TYPE_SIZE_T
 
+AX_CXX_COMPILE_STDCXX_17
+
 # Checks for library functions.
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
