Broken alphabet rewrite

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = lib/libcrnd.la
-lib_libcrnd_la_SOURCES = src/rnd.cpp include/rnd.h src/rnd/regex/regex.cpp src/rnd/regex/regex.h src/rnd/alphabet.hpp src/rnd/nfa/nfa.cpp src/rnd/nfa/nfa.h src/rnd/dfa/dfa.cpp src/rnd/dfa/dfa.h src/rnd/dfa/enumeration2.h src/rnd/dfa/partition.h src/distree/distree.cpp src/distree/distree.h src/redblack/tree.hpp
+lib_libcrnd_la_SOURCES = src/rnd.cpp include/rnd.h src/rnd/regex/regex.cpp src/rnd/regex/regex.h src/rnd/alphabet/alphabet.cpp src/rnd/alphabet/alphabet.hpp src/rnd/nfa/nfa.cpp src/rnd/nfa/nfa.h src/rnd/dfa/dfa.cpp src/rnd/dfa/dfa.h src/rnd/dfa/enumeration2.h src/rnd/dfa/partition.h src/distree/distree.cpp src/distree/distree.h src/redblack/tree.hpp
 lib_libcrnd_la_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include
-lib_libcrnd_la_LDFLAGS = -avoid-version
+lib_libcrnd_la_LDFLAGS = -version-info 0:0:0
 
 include_HEADERS = include/rnd.h
 
