Use static libraries in examples for debugging

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,6 +4,7 @@ CFLAGS = -g -Wall -Wextra
 CXX = g++
 CXXFLAGS = -g -Wall -I../include -I../src
 
+vpath %.a ../lib
 vpath %.so ../lib
 
 all:	example_cpp example_c
@@ -11,8 +12,8 @@ all:	example_cpp example_c
 example_cpp:	example.cpp librnd.so
 	$(CXX) $(CXXFLAGS) -o $@ $^
 
-example_c:	example.c libcrnd.so
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ $^
+example_c:	example.c libcrnd.a
+	$(CXX) $(CPPFLAGS) $(CFLAGS) -o $@ $^
 
 clean:
 	-rm -f example_cpp example_c
