Move python example in its own directory

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,7 +6,7 @@ CXX = g++
 CXXFLAGS = -g -std=gnu++17 -Wall -Wextra
 
 .PHONY:	all
-all:	build build/example.c build/example.cpp build/example.py
+all:	build build/example.c build/example.cpp
 
 build:
 	mkdir -p build
@@ -17,9 +17,6 @@ build/example.c:	c/template.c c/scanner.c
 build/example.cpp:	cpp/template.cpp cpp/scanner.cpp
 	python example.py template.cpp -d cpp > build/example.cpp
 
-build/example.py:	py/template.py py/scanner.py
-	python example.py template.py -d py > build/example.py
-
 .PHONY:	clean
 clean:
 	-rm -rf build
@@ -28,5 +25,3 @@ clean:
 compile:	all
 	$(CC) $(CFLAGS) $(CPPFLAGS) -o build/example_c build/example.c
 	$(CXX) $(CXXFLAGS) -o build/example_cpp build/example.cpp
-	cp build/example.py build/example_py
-	chmod +x build/example_py
