--- a/examples/python/Makefile
+++ b/examples/python/Makefile
@@ -1,2 +1,6 @@
-build/example.py:	template.py scanner.py
-	python ../example.py template.py
+output/scanners.py:	templates/template.py templates/scanner.py
+	python ../example.py $< > $@ 
+
+.PHONY:	clean
+clean:
+	-rm -f output/scanners.py
