--- a/examples/python/Makefile
+++ b/examples/python/Makefile
@@ -1,5 +1,5 @@
 output/scanners.py:	templates/template.py templates/scanner.py
-	python ../example.py $< > $@ 
+	python ../example.py template.py -d templates > $@ 
 
 .PHONY:	clean
 clean:
