--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ a.out
 *.o
 *.a
 bin/main
+Makefile.in
+aclocal.m4
+*.log
+bin
+compile
+config.*
+configure
+depcomp
+install-sh
+missing
+.deps
+.dirstamp
+stamp-h1
+test-driver
+*.cache
