Move all private includes to src

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,19 @@
 bin_PROGRAMS = bin/sagl
-bin_sagl_SOURCES = src/main.cpp src/match.hpp src/scanners.hpp \
-			   include/automaton.hpp include/enumeration.hpp include/grammar.hpp \
-			   include/parser.hpp include/parsingtable.hpp
+bin_sagl_SOURCES = \
+	src/main.cpp \
+	src/match.hpp \
+	src/scanners.hpp \
+	src/sagl/automaton.hpp \
+	src/sagl/enumeration.hpp \
+	include/grammar.hpp \
+	include/parser.hpp \
+	src/sagl/parsingtable.hpp
 
 bin_sagl_CXXFLAGS = -g -Wall -Wextra -Wpedantic
-bin_sagl_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
+bin_sagl_CPPFLAGS = \
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/src/sagl
 
 ACLOCAL_AMFLAGS = -I m4
 
