Add convenience headers

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,13 +5,14 @@ bin_sagl_SOURCES = \
 	src/scanners.hpp \
 	src/sagl/automaton.hpp \
 	src/sagl/enumeration.hpp \
-	include/grammar.hpp \
-	include/parser.hpp \
-	include/parsetable.hpp
+	include/sagl/grammar.hpp \
+	include/sagl/parser.hpp \
+	include/sagl/parsetable.hpp
 
 bin_sagl_CXXFLAGS = -g -Wall -Wextra -Wpedantic
 bin_sagl_CPPFLAGS = \
 	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/include/sagl \
 	-I$(top_srcdir)/src \
 	-I$(top_srcdir)/src/sagl
 
