Writer wrapper for future

--- a/src/future/Makefile
+++ b/src/future/Makefile
@@ -1,10 +1,10 @@
 CXX = g++
-CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17
+CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17 -fpic
 
 targets = $(patsubst %.cpp,%,$(shell find -name "*.cpp"))
 
 .PHONY:	all
-all:	$(targets) libfuture.a libfuture.so
+all:	$(targets) libfuture.a libfuture.so example_c
 
 $(targets):	%:	%.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
@@ -19,6 +19,9 @@ libfuture.so:	wrapper.cxx rnd.h
 	$(CXX) -shared -o $@ _future_.o
 	rm _future_.o
 
+example_c:	example.c
+	gcc -I. -L. $< -o $@ -lfuture 
+
 .PHONY:	clean
 clean:
-	-rm -rf $(targets) vgcore*
+	-rm -rf $(targets) vgcore* example_c
