Hide Partition variables

--- a/src/future/Makefile
+++ b/src/future/Makefile
@@ -9,17 +9,17 @@ all:	$(targets) libfuture.a libfuture.so example_c
 $(targets):	%:	%.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
-libfuture.a:	wrapper.cxx rnd.h
+libfuture.a:	wrapper.cxx rnd.h dfa.hpp
 	$(CXX) $(CXXFLAGS) -c -o _future_.o $<
 	$(AR) rcs $@ _future_.o
 	rm _future_.o
 
-libfuture.so:	wrapper.cxx rnd.h
+libfuture.so:	wrapper.cxx rnd.h dfa.hpp
 	$(CXX) $(CXXFLAGS) -c -o _future_.o $<
 	$(CXX) -shared -o $@ _future_.o
 	rm _future_.o
 
-example_c:	example.c
+example_c:	example.c libfuture.so libfuture.a
 	gcc -I. -L. $< -o $@ -lfuture 
 
 .PHONY:	clean
