--- a/examples/future/cpp/Makefile
+++ b/examples/future/cpp/Makefile
@@ -6,10 +6,10 @@ CPPFLAGS = -I../extra
 all:	output/scanners.hpp output/scanner_utils.hpp compile
 
 output/scanners.hpp:	templates/template.cpp templates/scanner.cpp
-	python ../example.py template.cpp -d templates > $@
+	python ../../example.py template.cpp -d templates > $@
 
 output/scanner_utils.hpp:	templates/scanner_utils.cpp
-	python ../example.py scanner_utils.cpp -d templates > $@
+	python ../../example.py scanner_utils.cpp -d templates > $@
 
 .PHONY:	clean
 clean:
