Update autoconf config

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([rnd], [0.2])
-AC_CONFIG_SRCDIR([src/rnd.cpp])
+AC_INIT([rnd], [0.3], [mail.levig@gmail.com])
+AC_CONFIG_SRCDIR([src/wrapper.cxx])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign subdir-objects])
 LT_INIT
@@ -22,17 +22,15 @@ AC_PROG_RANLIB
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([stddef.h])
+AC_CHECK_HEADERS([stddef.h stdint.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
-AC_TYPE_SIZE_T
+AC_TYPE_UINT32_T
 
 AX_CXX_COMPILE_STDCXX_17
 
 # Checks for library functions.
-AC_FUNC_MALLOC
-AC_FUNC_REALLOC
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
