Change configure.ac srcdir

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([sagl], [0.0])
-AC_CONFIG_SRCDIR([include/parser.hpp])
+AC_INIT([sagl], [0.0], [mail.levig@gmail.com])
+AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
 
