--- a/regexp/Makefile
+++ b/regexp/Makefile
@@ -1,2 +1,7 @@
+all:	scanner.py scanner.hpp
+
 scanner.py:	tokens.py
-	python $< template.py -d templates > $@
+	python $< template.py -d python > $@
+
+scanner.hpp:	tokens.py
+	python $< template.cpp -d cpp > $@
