Move c test files one directory up

--- a/scangen/examples/c/Makefile
+++ b/scangen/examples/c/Makefile
@@ -15,10 +15,10 @@ output/scanners.py:	templates/scanners.py
 
 .PHONY:	clean
 clean:
-	-rm -rf test/run_match
+	-rm -rf run_match
 
 .PHONY:	compile
-compile:	test/run_match
+compile:	run_match
 
-test/run_match:	test/run.c
+run_match:	run.c
 	$(CC) $(CFLAGS) -o $@ $<
