Update temp Makefile

--- a/sagl/src/Makefile
+++ b/sagl/src/Makefile
@@ -1,5 +1,9 @@
+CXX = g++
+CXXFLAGS = -g -Wall -std=c++1z
+CPPFLAGS = -I. -I../include
+
 main:	main.cpp
-	g++ -g -Wall -std=c++1z -o $@ $<
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -o $@ $<
 
 clean:
 	-rm -rf main
