--- a/sagl/configure.ac
+++ b/sagl/configure.ac
@@ -10,6 +10,10 @@ AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
+AC_PROG_AWK
+AC_PROG_INSTALL
+AC_PROG_CPP
+AC_PROG_MKDIR_P
 
 # Checks for libraries.
 
@@ -17,9 +21,11 @@ AC_PROG_CC
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
+AC_TYPE_UINT32_T
 AX_CXX_COMPILE_STDCXX_17
 
 # Checks for library functions.
+AC_FUNC_ERROR_AT_LINE
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
