Update regexp.parse includes

--- a/regexp/parse/Makefile
+++ b/regexp/parse/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -g -Wall -Wextra -Wpedantic -Werror -std=c++17
-CPPFLAGS = -I. -I../../sagl/src/temp
+CPPFLAGS = -I. -I../../sagl/include
 
 main:	main.cpp
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -o $@ $<
