--- a/sagl/Makefile.am
+++ b/sagl/Makefile.am
@@ -4,13 +4,15 @@ bin_main_SOURCES = \
 	src/parser.hpp \
 	src/parsetree.hpp \
 	src/scanner.hpp \
-	include/sagl.hpp
+	include/sagl.hpp \
+	../tools/handles.hpp
 
 bin_main_CXXFLAGS = -g -Wall -Wextra -Wpedantic
 
 bin_main_CPPFLAGS = \
 	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/src
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/../tools
 
 ACLOCAL_AMFLAGS = -I m4
 
