--- a/rnd/Makefile.am
+++ b/rnd/Makefile.am
@@ -38,7 +38,8 @@ include_HEADERS = include/rnd.h include/regexp.h
 ACLOCAL_AMFLAGS = -I m4
 
 check_PROGRAMS = examples/example_c examples/example_cpp \
-	src/rnd/automaton.test src/rnd/nexpr.test src/rnd/zsymbols.test
+	src/rnd/automaton.test src/rnd/nexpr.test src/rnd/zsymbols.test \
+	src/regexp/regexp.test
 
 src_rnd_automaton_test_SOURCES = \
 	src/rnd/automaton.hpp \
@@ -50,6 +51,17 @@ src_rnd_automaton_test_CPPFLAGS = -I$(top_srcdir)/../tools -I$(top_srcdir)/src/r
 src_rnd_nexpr_test_SOURCES = src/rnd/nexpr.hpp src/rnd/nexpr.test.cpp
 
 src_rnd_zsymbols_test_SOURCES = src/rnd/zsymbols.hpp src/rnd/zsymbols.test.cpp
+
+src_regexp_regexp_test_SOURCES = src/regexp/regexp.test.c include/regexp.h \
+	src/regexp/regexp.cxx src/regexp/eval.hpp src/regexp/parser.hpp \
+	src/regexp/scanner.hpp ../sagl/include/sagl.hpp
+
+src_regexp_regexp_test_CPPFLAGS = \
+	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/../tools \
+	-I$(top_srcdir)/src/regexp \
+	-I$(top_srcdir)/../sagl/include
 
 examples_example_c_SOURCES = include/rnd.h examples/example.c src/rnd/wrapper.cxx \
 	src/rnd/automaton.hpp ../tools/handles.hpp src/rnd/nexpr.hpp src/rnd/zsymbols.hpp
