--- a/scangen/Makefile
+++ b/scangen/Makefile
@@ -3,3 +3,7 @@ package:
 	-rm -rf build dist scangen.egg-info
 	python setup.py sdist bdist_wheel
 	twine upload dist/*
+
+.PHONY:	clean
+clean:
+	-rm -rf build dist scangen.egg-info
