Delete rnd.h files

--- a/rnd/configure.ac
+++ b/rnd/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ([2.69])
 AC_INIT([rnd], [0.3], [mail.levig@gmail.com])
-AC_CONFIG_SRCDIR([src/rnd/wrapper.cxx])
+AC_CONFIG_SRCDIR([src/regexp/regexp.cxx])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([foreign subdir-objects])
 LT_INIT
